Fixed issue with contact buttons at the bottom on mobile

--- a/less/agency.less
+++ b/less/agency.less
@@ -199,23 +199,6 @@ header {
     }
 }
 
-@media(max-width:  @screen-sm-breakpoint) {
-    header {
-        background-size: 200%;
-        background-position: top center;
-
-
-        .intro-text {
-            padding-top: 14em;
-            padding-bottom: 4em;
-            
-            .header-logo-overlay img {
-                margin-bottom: 2em;
-            }
-        }
-    }
-}
-
 @media(min-width: @screen-sm-breakpoint) {
     header {
         .intro-text {
@@ -234,6 +217,22 @@ header {
                 font-size: 75px;
                 line-height: 75px;
                 margin-bottom: 50px;
+            }
+        }
+    }
+}
+
+@media(max-width: @screen-sm-breakpoint) {
+    header {
+        background-size: 220%;
+        background-position: top center;
+
+        .intro-text {
+            padding-top: 14em;
+            padding-bottom: 4em;
+            
+            .header-logo-overlay img {
+                margin-bottom: 2em;
             }
         }
     }
@@ -300,11 +299,22 @@ section#contact {
                 color: white;
                 background: #eee;
                 overflow: hidden;
-                display: block;
+                display: table;
+                width: 100%;
                 color: black;
                 padding: 1.5em 0;
                 margin: 0 0 1em;
+                text-align: left;
     
+                > div {
+                    display: table-cell;
+                    vertical-align: middle;
+                }
+
+                > div:first-child {
+                    text-align: center;
+                }
+
                 &:hover, &:active {
                     background: #fff;
                     text-decoration: none;
@@ -319,7 +329,6 @@ section#contact {
                     line-height: 60px;
                     font-size: 1.25em;
                     text-align: center;
-                    float: right;
                     border-radius: 30px;
                 }
 
@@ -334,22 +343,30 @@ section#contact {
             }
         }
 
-        @media(max-width:  @screen-sm-breakpoint) {
+        @media(max-width:  550px) {
             margin: 0;
             padding: 0;
-            font-size: 1.5em;
+            font-size: 1em;
             
 
             li {
                 a.row {
 
-                    i {
-                        float: left;
-                        margin-right: 0.7em;
+                    > div:first-child {
+                        padding: 0;
+                        display: none;
                     }
 
-                    .subtext {
-                        font-size: 0.75em;
+                    i {
+                        font-size: 1em;
+                        height: 30px;
+                        width: 30px;
+                        line-height: 30px;
+                        margin-left: 4px;
+                    }
+
+                    .single-line {
+                        line-height: 30px;
                     }
                 }
             }
